[package]
name = "v8_coverage_tools"
version = "0.1.0"
authors = ["Charles Samborski <demurgos@demurgos.net>"]
license = "MIT"
edition = "2018"

[dependencies]
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
typed-arena = "2.0.1"

[dev-dependencies]
serde_json = "1.0.68"
test-generator = "0.3.0"
